; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/extr_vdr.c_ReadIndexRecord.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/extr_vdr.c_ReadIndexRecord.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEEK_SET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i32*, i32*)* @ReadIndexRecord to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ReadIndexRecord(i32* %0, i32 %1, i32 %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca [8 x i32], align 16
  %13 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = load i32, i32* %9, align 4
  %16 = sext i32 %15 to i64
  %17 = mul i64 32, %16
  %18 = trunc i64 %17 to i32
  %19 = load i32, i32* @SEEK_SET, align 4
  %20 = call i64 @fseek(i32* %14, i32 %18, i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %50

23:                                               ; preds = %5
  %24 = bitcast [8 x i32]* %12 to i32**
  %25 = load i32*, i32** %7, align 8
  %26 = call i32 @fread(i32** %24, i32 32, i32 1, i32* %25)
  %27 = icmp slt i32 %26, 1
  br i1 %27, label %28, label %29

28:                                               ; preds = %23
  store i32 0, i32* %6, align 4
  br label %50

29:                                               ; preds = %23
  %30 = load i32, i32* %8, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %42

32:                                               ; preds = %29
  %33 = bitcast [8 x i32]* %12 to i32**
  %34 = call i32 @GetQWLE(i32** %33)
  store i32 %34, i32* %13, align 4
  %35 = load i32, i32* %13, align 4
  %36 = call i32 @UINT64_C(i32 -1)
  %37 = and i32 %35, %36
  %38 = load i32*, i32** %10, align 8
  store i32 %37, i32* %38, align 4
  %39 = load i32, i32* %13, align 4
  %40 = ashr i32 %39, 48
  %41 = load i32*, i32** %11, align 8
  store i32 %40, i32* %41, align 4
  br label %49

42:                                               ; preds = %29
  %43 = bitcast [8 x i32]* %12 to i32**
  %44 = call i32 @GetDWLE(i32** %43)
  %45 = load i32*, i32** %10, align 8
  store i32 %44, i32* %45, align 4
  %46 = getelementptr inbounds [8 x i32], [8 x i32]* %12, i64 0, i64 5
  %47 = load i32, i32* %46, align 4
  %48 = load i32*, i32** %11, align 8
  store i32 %47, i32* %48, align 4
  br label %49

49:                                               ; preds = %42, %32
  store i32 1, i32* %6, align 4
  br label %50

50:                                               ; preds = %49, %28, %22
  %51 = load i32, i32* %6, align 4
  ret i32 %51
}

declare dso_local i64 @fseek(i32*, i32, i32) #1

declare dso_local i32 @fread(i32**, i32, i32, i32*) #1

declare dso_local i32 @GetQWLE(i32**) #1

declare dso_local i32 @UINT64_C(i32) #1

declare dso_local i32 @GetDWLE(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
